# deribitsystem

./: .env  CMakeLists.txt  README.md  run_build.sh  server.crt  server.key
libs/env_handler/: env_handler.cpp  env_handler.h
libs/order_placement/: order_placement.cpp  order_placement.h
libs/rest_api/: rest_client.cpp  rest_client.h
libs/websocket/: websocket_client.cpp  websocket_client.h  websocket_manager.cpp  websocket_manager.h  websocket_server.cpp  websocket_server.h
scripts/: test_auth.py
src/: main.cpp
